--- a/media/CSS/widgets.css
+++ b/media/CSS/widgets.css
@@ -10,18 +10,13 @@
 
 /* All */
 * {
-    -GtkButton-inner-border: 0;
-    -GtkEntry-inner-border: 0;
     -GtkComboBox-inner-border: 0;
     -GtkMenuToolButton-inner-border: 0;
     -GtkTreeMenu-inner-border: 0;
     -unico-focus-border-color: transparent; /* Removes the annoying red outline on active buttons*/
-    engine: none; /* Turns off annoying borders */
     border-width: 0px;
-    -GtkWidget-focus-line-width: 0px;
+    outline-width: 0px;
     -GtkTreeView-vertical-separator: 0;
-    -GtkWidget-separator-width: 0;
-    -GtkWidget-separator-height: 0;
 }
 
 /**
@@ -58,7 +53,7 @@ GtkWidget {
     /* Needed for Jessie, removed all the box shadows from widgets */
     box-shadow: inset 0 0, inset 0 0;
     /* Remove weird outline of gifs on Jessie */
-    icon-shadow: none;
+    -gtk-icon-shadow: none;
     /* Remove white outline on some label text */
     text-shadow: none;
 }
@@ -129,11 +124,6 @@ GtkComboBox .menu {
     border-color: @active_border;
     border-width: 2px;
     border-radius: 3px;
-}
-
-GtkComboBox .separator {
-    /* This removes lines in combotextbox*/
-    -GtkWidget-wide-separators: true;
 }
 
 /**
